--- a/Wikipedia/Localizations/zh-hant.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/zh-hant.lproj/Localizable.strings
@@ -1450,7 +1450,7 @@
 "year-in-review-feature-announcement-body" = "查看我們今年在 Wikipedia 上閱讀和編輯的文章的洞察，並分享我們一年的亮點時刻。";
 "year-in-review-feature-announcement-title" = "探索 Wikipedia 年度回顧";
 "year-in-review-feature-explore-body-personalized" = "查看您在 Wikipedia 應用程式上閱讀的文章以及所進行的編輯。您的閱讀歷史將受到保護，閱讀洞察是使用儲存在您裝置上的本地資料計算得出的。";
-"year-in-review-personalized-editing-subtitle-format" = "您在 Wikipedia 上進行了 XXX 次編輯。感謝您作為志願編輯者之一，為全球 Wikimedia 專案帶來改變。";
+"year-in-review-personalized-editing-subtitle-format" = "您在 Wikipedia 上進行了 $1 次編輯。感謝您作為志願編輯者之一，為全球 Wikimedia 專案帶來改變。";
 "year-in-review-personalized-editing-subtitle-format-500plus" = "您編輯了維基百科超過 500 次。感謝您成為替世界各維基媒體計畫做出貢獻的志工編輯者之一。";
 "year-in-review-personalized-editing-title-format" = "您在 Wikipedia 上進行了 $1 次編輯";
 "year-in-review-personalized-editing-title-format-500plus" = "您編輯了維基百科 500 多次。";
