--- a/Wikipedia/Localizations/zh-hant.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/zh-hant.lproj/Localizable.strings
@@ -1459,7 +1459,7 @@
 "year-in-review-share-text" = "這是我的 Wikipedia 年度回顧，由 Wikipedia iOS 應用程式製作。 (https://apps.apple.com/app/wikipedia/id324715238) #WikipediaYearInReview";
 "year-in-review-feature-explore-body" = "Wikipedia 是世界歷史上規模最大的知識資源，且免費提供給世界各地的每一個人。透過 Wikipedia 的視角，回顧 2024 年的點點滴滴。";
 "year-in-review-base-saved-title" = "我們擁有超過 $1 萬個閱讀清單";
-"year-in-review-base-saved-subtitle" = "今年，活躍的 iOS 應用程式用戶創建了超過 %1 萬個閱讀清單。將文章增加到閱讀清單，可以讓您即使在離線時也能存取文章。此外，您還可以登入帳戶，將閱讀清單同步到不同裝置。";
+"year-in-review-base-saved-subtitle" = "今年，活躍的 iOS 應用程式用戶創建了超過 $1 萬個閱讀清單。將文章增加到閱讀清單，可以讓您即使在離線時也能存取文章。此外，您還可以登入帳戶，將閱讀清單同步到不同裝置。";
 "year-in-review-personalized-donate-title" = "您的慷慨幫助 Wikipedia 持續蓬勃發展";
 "year-in-review-personalized-donate-subtitle" = "感謝您為自由知識的未來投入支持。今年，Wikimedia 基金會改進了技術，以更好地服務每一位讀者和志願者，開發了促進合作的工具，並支持更多語言版本的 Wikipedia。了解更多關於我們的工作內容。";
 "year-in-review-base-donate-title" = "Wikipedia 上顯示的廣告數量為 0";
