--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -736,14 +736,14 @@
 "main-menu-title" = "More";
 "main-menu-zero-faq" = "Wikipedia Zero FAQ";
 "menu-cancel-accessibility-label" = "Cancel";
-"microsite-yir-english-edits-bytes-slide-subtitle" = "In 2024, volunteers added 3,416,899,197 bytes to English Wikipedia. The sum of their work together leads to a steadily improving, fact-based, and reliable knowledge resource that they give to the world. All of us have knowledge to share, [learn how to participate]($1).";
-"microsite-yir-english-edits-bytes-slide-title" = "3.4 billion bytes added";
-"microsite-yir-english-edits-slide-subtitle" = "Volunteers made 81,987,181 changes across over 300 different language editions of Wikipedia. Over 31.2 million changes were made on English Wikipedia. Every hour of every day, volunteers are working to improve Wikipedia.";
-"microsite-yir-english-edits-slide-title" = "Editors made nearly 82 million changes this year";
+"microsite-yir-english-edits-bytes-slide-subtitle" = "In 2024, volunteers added 4,104,852,969 bytes to English Wikipedia. The sum of all their work together leads to a steadily improving, fact-based, and reliable knowledge resource that they give to the world. All of us have knowledge to share, [learn how to participate]($1).";
+"microsite-yir-english-edits-bytes-slide-title" = "4 billion bytes added";
+"microsite-yir-english-edits-slide-subtitle" = "Volunteers made 98,222,407 changes across over 300 different language editions of Wikipedia. Over 38 million changes were made on English Wikipedia. Every hour of every day, volunteers are working to improve Wikipedia.";
+"microsite-yir-english-edits-slide-title" = "Editors made nearly 98 million changes this year";
 "microsite-yir-english-non-donor-slide-subtitle" = "With your help, the Wikimedia Foundation—the nonprofit behind Wikipedia—will continue to ensure that the information you rely on is ad-free and trustworthy, while keeping Wikipedia running smoothly with cutting-edge tools and technologies. Please consider making a donation today. [Learn more about our work]($1).";
 "microsite-yir-english-non-donor-slide-title" = "0 ads served on Wikipedia";
-"microsite-yir-english-reading-slide-subtitle" = "People spent an estimated 2.4 billion hours—nearly 275,000 years!—reading English Wikipedia in 2024. Wikipedia is there when you want to learn about our changing world, win a bet among friends, or answer a curious child’s question.";
-"microsite-yir-english-reading-slide-title" = "We spent 2.4 billion hours reading";
+"microsite-yir-english-reading-slide-subtitle" = "People spent an estimated 2.9 billion hours—over 331,000 years!—reading English Wikipedia in 2024. Wikipedia is there when you want to learn about our changing world, win a bet among friends, or answer a curious child’s question.";
+"microsite-yir-english-reading-slide-title" = "We spent 2.9 billion hours reading";
 "microsite-yir-english-saved-reading-slide-subtitle" = "Active iOS App users had over 62.2 million reading lists this year. Adding articles to reading lists allows you to access articles even while offline. You can also log in to sync reading lists across devices.";
 "microsite-yir-english-saved-reading-slide-title" = "We had over 62.2 million reading lists";
 "microsite-yir-english-top-read-slide-subtitle" = "When people want to learn about our world—the good, bad, weird, and wild alike—they turn to Wikipedia. The top 5 visited articles on English Wikipedia were:\n\n1. $1\n2. $2\n3. $3\n4. $4\n5. $5\nRead more in $6our dedicated blog post$7.";
