Manual fixes to TW strings after the merge from main

--- a/Wikipedia/Localizations/ar.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/ar.lproj/Localizable.strings
@@ -793,7 +793,7 @@
 "microsite-yir-english-reading-slide-title" = "لقد قضينا 2.9 مليار ساعة في القراءة";
 "microsite-yir-english-saved-reading-slide-subtitle" = "كان لدى مستخدمي تطبيق iOS النشطين أكثر من 62.2 مليون قائمة قراءة هذا العام. تتيح لك إضافة المقالات إلى قوائم القراءة الوصول إلى المقالات حتى أثناء عدم الاتصال بالإنترنت. يمكنك أيضًا تسجيل الدخول لمزامنة قوائم القراءة عبر الأجهزة.";
 "microsite-yir-english-saved-reading-slide-title" = "كان لدينا أكثر من 62.2 مليون قائمة قراءة";
-"microsite-yir-english-top-read-slide-subtitle" = "عندما يريد الناس التعرف على عالمنا - الخير والشر والغرابة والوحشية على حد سواء - فإنهم يلجأون إلى ويكيبيديا. كانت المقالات الخمس الأكثر زيارة على ويكيبيديا الإنجليزية هي:\n\n1. $1 \n2. $2 \n3. $3 \n4. $4 \n5. $5 \nاقرأ المزيد في منشور مدونتنا المخصص بقيمة $6 $7 .";
+"microsite-yir-english-top-read-slide-subtitle" = "كانت المقالات الخمس الأكثر زيارة على ويكيبيديا الإنجليزية هي:\n\n1. $1 \n2. $2 \n3. $3 \n4. $4 \n5. $5 \nاقرأ المزيد في منشور مدونتنا المخصص بقيمة $6 $7 .";
 "microsite-yir-english-top-read-slide-title" = "المقالات الأكثر شعبية في ويكيبيديا الإنجليزية";
 "more-languages-tooltip-description" = "ابحث في ويكيبيديا بما يقرب من 300 لغة";
 "more-languages-tooltip-title" = "أضف لغات";
