--- a/Wikipedia/Localizations/pl.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/pl.lproj/Localizable.strings
@@ -954,12 +954,12 @@
 "wikitext-upload-save-terms-name" = "Warunki użytkowania";
 "year-in-review-base-donate-subtitle" = "Dzięki Twojej pomocy Fundacja Wikimedia – organizacja non-profit stojąca za Wikipedią – będzie nadal zapewniać, że informacje, na których polegasz, będą wolne od reklam i godne zaufania, a jednocześnie zapewni płynne działanie Wikipedii dzięki najnowocześniejszym narzędziom i technologiom. Prosimy o rozważenie dokonania darowizny już dziś. [Dowiedz się więcej o naszej pracy]($1).";
 // Fuzzy
-"year-in-review-base-editors-subtitle" = "Wolontariusze wprowadzili 81 987 181 zmian w ponad 300 wersjach językowych Wikipedii. Z tego, 31,2 miliona to edycje w wersji angielskiej. Każdego dnia, o każdej godzinie wolontariusze pracują nad ulepszaniem Wikipedii.";
+"year-in-review-base-editors-subtitle" = "Wolontariusze wprowadzili 555 647 zmian w ponad 300 wersjach językowych Wikipedii. Każdego dnia, o każdej godzinie wolontariusze pracują nad ulepszaniem Wikipedii.";
 "year-in-review-base-edits-subtitle" = "W tym roku Wikipedia była edytowana średnio $1 razy na minutę. Artykuły są tworzone wspólnie i ulepszane przy użyciu wiarygodnych źródeł. Wszyscy mamy wiedzę do podzielenia się, [dowiedz się, jak wziąć w tym udział]($2).";
 "year-in-review-base-reading-subtitle" = "W tym roku Wikipedia miała ponad $1 milion artykułów w ponad $2 językach. Dołączyłeś(-aś) do milionów ludzi, poszerzających wiedzę i zgłębiających różnorodne tematy.";
 "year-in-review-base-reading-title" = "Wikipedia była (i jest) dostępna w ponad 300 językach";
 // Fuzzy
-"year-in-review-base-saved-subtitle" = "Aktywni użytkownicy aplikacji iOS mieli w tym roku ponad 31,6 miliona list do przeczytania. Dodawanie do nich artykułów pozwala na czytanie ich nawet bez dostępu do internetu. Możesz się zalogować, aby synchronizować zawartość list między urządzeniami.";
+"year-in-review-base-saved-subtitle" = "Aktywni użytkownicy aplikacji iOS mieli w tym roku ponad 62,2 miliona list do przeczytania. Dodawanie do nich artykułów pozwala na czytanie ich nawet bez dostępu do internetu. Możesz się zalogować, aby synchronizować zawartość list między urządzeniami.";
 "year-in-review-base-saved-title" = "Mieliśmy ponad $1 mln list do przeczytania";
 "year-in-review-collective-article-views" = "Animowana ilustracja przedstawiająca ekran komputera z otwartą przeglądarką internetową i aktywnym przeglądaniem artykułu w Wikipedii.";
 // Fuzzy
