--- a/Wikipedia/Localizations/zh-hans.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/zh-hans.lproj/Localizable.strings
@@ -1474,18 +1474,18 @@
 "year-in-review-base-donate-subtitle" = "在您的帮助下，维基媒体基金会——维基百科背后的非营利组织——将继续努力，以确保您依赖的信息没有广告且值得信赖，同时通过尖端工具和技术，使维基百科保持流畅运行。请考虑在今天捐款。[进一步了解我们的工作]($1)。";
 "year-in-review-base-donate-title" = "维基百科投放了 0 条广告";
 // Fuzzy
-"year-in-review-base-editors-subtitle" = "今年截止到现在，维基百科的志愿者编辑社区在 iOS 应用上进行了超过 $1 次编辑。维基百科的核心和灵魂是我们的全球社群，包括志愿者、捐赠者和像您一样的数十亿读者——所有人共享对可靠信息的不受限访问。";
+"year-in-review-base-editors-subtitle" = "今年截止到现在，维基百科的志愿者编辑社区在 iOS 应用上进行了超过 555647 次编辑。维基百科的核心和灵魂是我们的全球社群，包括志愿者、捐赠者和像您一样的数十亿读者——所有人共享对可靠信息的不受限访问。";
 "year-in-review-base-editors-title" = "iOS 应用上的编辑者进行了超过 $1 次编辑";
 "year-in-review-base-edits-subtitle" = "今年，维基百科的平均编辑速度为每分钟 $1 次。文章由志愿者参考可靠信息来源协作创建和改进。我们所有人都有可以分享的知识。[了解如何参与]($2）。";
 "year-in-review-base-edits-title" = "维基百科每分钟被编辑 $1 次";
 // Fuzzy
-"year-in-review-base-reading-subtitle" = "今年，维基百科拥有超过 6300 万篇文章，涵盖 300 多种活跃语言。您与数百万人一起拓展知识，探索各种主题。";
+"year-in-review-base-reading-subtitle" = "今年，维基百科拥有超过 $2 万篇文章，涵盖 $2 多种活跃语言。您与数百万人一起拓展知识，探索各种主题。";
 "year-in-review-base-reading-title" = "维基百科提供 300 多种语言版本";
 // Fuzzy
 "year-in-review-base-saved-subtitle" = "今年，活跃的 iOS 应用用户共有超过 6220 万个阅读列表。将文章添加到阅读列表后，您就可以离线访问文章。您还可以登录账户，在不同设备上同步阅读列表。";
 "year-in-review-base-saved-title" = "我们有超过 $1 万个阅读列表";
 // Fuzzy
-"year-in-review-base-viewed-subtitle" = "iOS 应用用户浏览了维基百科文章 18 亿次。对于全世界的人们来说，维基百科是解答疑问、查找上学或工作所需信息或学习新知识的第一站。";
+"year-in-review-base-viewed-subtitle" = "iOS 应用用户浏览了维基百科文章 $1 亿次。对于全世界的人们来说，维基百科是解答疑问、查找上学或工作所需信息或学习新知识的第一站。";
 "year-in-review-base-viewed-title" = "我们浏览了维基百科文章 $1 亿次";
 "year-in-review-button-title" = "年度回顾";
 "year-in-review-day-friday" = "星期五";
@@ -1513,7 +1513,7 @@
 "year-in-review-personalized-edit-views-subtitle-format" = "全世界的读者感谢您做出的贡献。在过去 2 个月中，您编辑的文章总浏览量已达 $1 次。正因为有像您这样的编辑者，维基百科才能不断改进，成为基于事实的、可靠的全球知识资源库。";
 "year-in-review-personalized-edit-views-title-format" = "您编辑的文章最近已被浏览超过 $1 次";
 // Fuzzy
-"year-in-review-personalized-editing-subtitle-format" = "您编辑了维基百科 $1 次。感谢您成为志愿者编辑，并对全世界的维基媒体项目产生影响。";
+"year-in-review-personalized-editing-subtitle-format" = "今年，您阅读了 $1 篇文章。维基百科有超过 $2 万篇文章，涵盖 $3 多种语言。您与数百万人一起拓展知识，探索各种主题。";
 "year-in-review-personalized-editing-subtitle-format-500plus" = "您在维基百科上的编辑次数超过了500次。感谢您成为世界各地在维基媒体项目上作出贡献的志愿编者中的一员。";
 // Fuzzy
 "year-in-review-personalized-editing-title-format" = "您编辑了维基百科 $1 次";
