--- a/Wikipedia/Localizations/zh-hant.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/zh-hant.lproj/Localizable.strings
@@ -1443,7 +1443,7 @@
 "year-in-review-base-donate-subtitle" = "在您的支持下，維基媒體基金會——Wikipedia 背後的非營利組織——將繼續確保您所依賴的資訊無廣告且值得信賴，同時利用尖端工具和技術，讓 Wikipedia 平穩運行。請考慮今天捐款支持，並了解更多關於我們的工作內容。";
 "year-in-review-base-donate-title" = "Wikipedia 上顯示的廣告數量為 0";
 // Fuzzy
-"year-in-review-base-editors-subtitle" = "今年截至目前，Wikipedia 的志願編輯者社群在 iOS 應用程式上完成了超過 $1 次編輯。Wikipedia 的核心是我們的全球志願者社群，包括貢獻者、捐款者，以及像您一樣的數十億讀者——大家齊心協力，共同提供無限且可靠的資訊存取。";
+"year-in-review-base-editors-subtitle" = "今年截至目前，Wikipedia 的志願編輯者社群在 iOS 應用程式上完成了超過 555,647 次編輯。Wikipedia 的核心是我們的全球志願者社群，包括貢獻者、捐款者，以及像您一樣的數十億讀者——大家齊心協力，共同提供無限且可靠的資訊存取。";
 "year-in-review-base-editors-title" = "iOS 應用程式上的編輯者進行了超過 $1 次編輯。";
 // Fuzzy
 "year-in-review-base-edits-subtitle" = "今年，Wikipedia 的平均編輯速度為每分鐘 $1 次。文章是基於可靠來源由社群共同創建和改進的。我們每個人都有知識可以分享，歡迎學習如何參與其中。";
@@ -1451,7 +1451,7 @@
 "year-in-review-base-reading-subtitle" = "Wikipedia 在今年擁有超過 $1 萬篇文章，涵蓋 $2 多種活躍語言。您與數百萬人一起擴展知識，探索多元主題。";
 "year-in-review-base-reading-title" = "Wikipedia 提供超過 300 種語言版本";
 // Fuzzy
-"year-in-review-base-saved-subtitle" = "今年，活躍的 iOS 應用程式用戶創建了超過 $1 萬個閱讀清單。將文章增加到閱讀清單，可以讓您即使在離線時也能存取文章。此外，您還可以登入帳戶，將閱讀清單同步到不同裝置。";
+"year-in-review-base-saved-subtitle" = "今年，活躍的 iOS 應用程式用戶創建了超過 6220 萬個閱讀清單。將文章增加到閱讀清單，可以讓您即使在離線時也能存取文章。此外，您還可以登入帳戶，將閱讀清單同步到不同裝置。";
 "year-in-review-base-saved-title" = "我們擁有超過 $1 萬個閱讀清單";
 "year-in-review-base-viewed-subtitle" = "iOS 應用程式用戶已瀏覽 Wikipedia 文章達 $1 億次。對於全球各地的人們來說，Wikipedia 是解答問題、查詢學校或工作相關資訊，或學習新知的第一站。";
 "year-in-review-base-viewed-title" = "我們已瀏覽了 $1 億次 Wikipedia 文章";
@@ -1487,7 +1487,7 @@
 "year-in-review-personalized-editing-title-format" = "您在 Wikipedia 上進行了 $1 次編輯";
 "year-in-review-personalized-editing-title-format-500plus" = "您編輯了維基百科 500 多次。";
 // Fuzzy
-"year-in-review-personalized-reading-subtitle-format" = "今年，您閱讀了 $1 篇文章，包括$2、 $3 和 $4。Wikipedia 提供超過 6,300 萬篇文章，涵蓋 300 多種語言版本。您與數百萬人一起拓展知識，探索多樣化的主題。";
+"year-in-review-personalized-reading-subtitle-format" = "今年，您閱讀了 $1 篇文章。Wikipedia 提供超過 $2 萬篇文章，涵蓋 $3 多種語言版本。您與數百萬人一起拓展知識，探索多樣化的主題。";
 "year-in-review-personalized-reading-title-format" = "您今年閱讀了 {{PLURAL:$1|$1}} 篇條目";
 // Fuzzy
 "year-in-review-personalized-saved-subtitle-format" = "您已儲存 $1 篇文章，包括$2、$3和$4。每篇儲存的文章都反映了您的興趣，並幫助您在 Wikipedia 上建立個人化的知識庫。";
