--- a/Wikipedia/iOS Native Localizations/es.lproj/Localizable.stringsdict
+++ b/Wikipedia/iOS Native Localizations/es.lproj/Localizable.stringsdict
@@ -474,8 +474,7 @@
 	<key>relative-date-days-ago</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
-		<string>
-%#@v1@</string>
+		<string>%#@v1@</string>
 		<key>v1</key>
 		<dict>
 			<key>NSStringFormatSpecTypeKey</key>
