--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -904,11 +904,11 @@
 "on-this-day-sub-title-for-date-from-language-wikipedia" = "$1 from $2 Wikipedia";
 "on-this-day-title" = "On this day";
 "original-tab-button-popover-description" = "Tap on the 'W' to return to the tab you started from";
-"page-history-anonymous-edits" = "anon edits";
 "page-history-bot-edits" = "bot edits";
 "page-history-compare-accessibility-hint" = "Tap to select two revisions to compare";
 "page-history-compare-title" = "Compare";
 "page-history-graph-accessibility-label" = "Graph of edits over time";
+"page-history-logged-in-edits" = "logged-in";
 "page-history-minor-edits" = "minor edits";
 "page-history-revision-author-accessibility-label" = "Author: $1";
 "page-history-revision-comment-accessibility-label" = "Comment $1";
@@ -919,7 +919,7 @@
 "page-history-revision-time-accessibility-label" = "Revision made $1";
 "page-history-revisions-comparison-warning" = "Only two revisions can be selected";
 "page-history-stats-text" = "{{PLURAL:$1|$1 edit|$1 edits}} since $2";
-"page-history-user-edits" = "user edits";
+"page-history-unregistered-edits" = "unregistered edits";
 "page-issues" = "Page issues";
 "page-location" = "View on a map";
 "page-protected-can-not-edit" = "You do not have the rights to edit this page";
