More UI work, logic

--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -707,6 +707,10 @@
 "insert-media-title" = "Title for the view in charge of inserting media into an article";
 "inuktitut-variants-alert-body" = "Body text of alert used to inform users about Inuktitut variant support. Please do not translate the newlines (\n) or Inuktitut characters (ᐃᓄᒃᑎᑐᑦ ᑎᑎᕋᐅᓯᖅ ᓄᑖᖅ, etc.).";
 "inuktitut-variants-alert-title" = "Title of alert used to inform users about Inuktitut variant support.";
+"ip-account-cta-bottom" = "Continue without logging in button title";
+"ip-account-cta-top" = "Log in or create an account button title";
+"ip-account-edit-sheet" = "IP account sheet for editors";
+"ip-account-edit-sheet-subtitle" = "Information on temporary accounts";
 "kazakh-variants-alert-body" = "Body text of alert used to inform users about Kazakh variant support. Please do not translate the newlines (\n) or Kazakh characters (Қазақша, etc.).";
 "kazakh-variants-alert-title" = "Title of alert used to inform users about Kazakh variant support.";
 "kurdish-variants-alert-body" = "Body text of alert used to inform users about Kurdish variant support. Please do not translate the newlines (\n) or Kurdish characters (كوردی, etc.).";
@@ -1276,6 +1280,10 @@
 "talk-pages-user-groups" = "Title for menu option for information on the user's user groups. Please prioritize for de, ar and zh wikis.";
 "talk-pages-user-logs" = "Title for menu option to consult the user's public logs. Please prioritize for de, ar and zh wikis.";
 "talk-pages-view-title" = "Title of user and article talk pages view. Please prioritize for de, ar and zh wikis.";
+"temp-account-edit-sheet-cta-top" = "Temporary account sheet for editors, log in/sign up.";
+"temp-account-edit-sheet-subtitle" = "Information on temporary accounts, $1 is the temporary username.";
+"temp-account-edit-sheet-title" = "Temporary account sheet for editors";
+"temp-account-got-it" = "Got it button";
 "terms-of-use-title" = "Title for the terms of use";
 "theme-black-display-name" = "Black theme name presented to the user";
 "theme-dark-display-name" = "Dark theme name presented to the user";
