--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -707,6 +707,10 @@
 "insert-media-title" = "Insert media";
 "inuktitut-variants-alert-body" = "The Wikipedia app now supports the following Inuktitut variants as primary or secondary languages within the app, making it easier to read, search and edit in your preferred variants:\n\nᐃᓄᒃᑎᑐᑦ ᑎᑎᕋᐅᓯᖅ ᓄᑖᖅ Inuktitut, Syllabics (ike-cans)\nInuktitut ilisautik, Inuktitut, Latin (ike-latn)";
 "inuktitut-variants-alert-title" = "Updates to Inuktitut variant support";
+"ip-account-cta-bottom" = "Contnue without logging in";
+"ip-account-cta-top" = "Log in or create an account";
+"ip-account-edit-sheet" = "You are not logged in";
+"ip-account-edit-sheet-subtitle" = "Once you make an edit, a <b>temporary account</b> will be created for you to protect your privacy. <a href=\"(learnMoreURL)\">Learn more.</a><br/><br/>Log in or create an account to get credit for future edits and to access other features.";
 "kazakh-variants-alert-body" = "The Wikipedia app now supports the following Kazakh variants as primary or secondary languages within the app, making it easier to read, search and edit in your preferred variants:\n\nҚазақша Kazakh (kk)\nҚазақша Кирил Kazakh, Cyrillic (kk-cyrl)\nqazaqşa latin Kazakh, Latin (kk-latn)\nتوتە قازاقشا Kazakh, Arabic (kk-arab)";
 "kazakh-variants-alert-title" = "Updates to Kazakh variant support";
 "kurdish-variants-alert-body" = "The Wikipedia app now supports the following Kurdish variants as primary or secondary languages within the app, making it easier to read, search and edit in your preferred variants:\n\nKurdî Latînî Kurdish, Latin (ku-latn)\nكوردی Kurdish, Arabic (kk-arab)";
@@ -1276,6 +1280,10 @@
 "talk-pages-user-groups" = "User groups";
 "talk-pages-user-logs" = "Logs";
 "talk-pages-view-title" = "Talk";
+"temp-account-edit-sheet-cta-top" = "Log in or create an account";
+"temp-account-edit-sheet-subtitle" = "Your edit will be attributed to <b>$1</b>. Your <a href=\"(learnMoreURL)\">IP address</a> will be visible to administrators.<br/><br/>If you log in or create an account, your edits will be attributed to a name you choose, among other benefits.";
+"temp-account-edit-sheet-title" = "You are using a temporary account";
+"temp-account-got-it" = "Got it";
 "terms-of-use-title" = "Terms of use";
 "theme-black-display-name" = "Black";
 "theme-dark-display-name" = "Dark";
