--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -1281,7 +1281,7 @@
 "talk-pages-user-logs" = "Logs";
 "talk-pages-view-title" = "Talk";
 "temp-account-edit-sheet-cta-top" = "Log in or create an account";
-"temp-account-edit-sheet-subtitle" = "Your edit will be attributed to $2$1$3. $4IP address$5 will be visible to administrators.$6If you log in or create an account, your edits will be attributed to a name you choose, among other benefits.";
+"temp-account-edit-sheet-subtitle" = "Your edit will be attributed to $2$1$3. Your $4IP address$5 will be visible to administrators. $7Learn more.$5$6 If you log in or create an account, your edits will be attributed to a name you choose, among other benefits.";
 "temp-account-edit-sheet-title" = "You are using a temporary account";
 "temp-account-got-it" = "Got it";
 "terms-of-use-title" = "Terms of use";
