--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -268,6 +268,8 @@
 "edit-preview-simplified-format-message" = "All content is shown in simplified format.";
 "edit-published" = "Edit published";
 "edit-published-subtitle" = "You just made Wikipedia better for everyone";
+"edit-sheet-ip-account-notice" = "IP Account Notice";
+"edit-sheet-temp-account-notice" = "Temporary Account Notice";
 "edit-show-web-preview" = "Show web preview";
 "edit-summary-add-summary-text" = "Add an edit summary";
 "edit-summary-choice-added-image" = "Added image";
